Stop wrapping of clocks and turned on xhttpGetTime()

--- a/css/default.css
+++ b/css/default.css
@@ -18,6 +18,7 @@ body {
 
 #clock-display {
 	text-align: center;
+	white-space: nowrap;
 }
 
 #timezone-display {
